--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <div id="heartsContainer"></div>
                 <h1 class="font-semibold text-wrap animate__animated animate__zoomIn text-lg text-pink-800 mb-6 leading-relaxed">
                     Happyy birthdayyyy sayaangg! 🎉🎂<br><br>
-                    Semoga dengan bertambah dewasanya kamu, selalu diiringi dengan hal-hal yang baik. Makasih sudah mau menjadi bagian dari kehidupanku yang membosankan ini. Semoga kedepannya hubungan kita makin lancar. Maaf kalau selama ini aku selalu bikin kamu sakit hati mulai dari hal-hal kecil yang selalu jadi pemicu permasalahan kita.<br><br>
+                    Semoga di usia kamu yang ke-17 tahun ini, selalu diiringi dengan hal-hal yang baik. Makasih sudah mau menjadi bagian dari kehidupanku yang membosankan ini. Semoga kedepannya hubungan kita makin lancar. Maaf kalau selama ini aku selalu bikin kamu sakit hati mulai dari hal-hal kecil yang selalu jadi pemicu permasalahan kita. maka mari kita saling memahami dan turunkan ego kita agar cinta kita bisa bertahan selamanya<br><br>
                     LOOOVEEEE U MMOORRREEEEE ECHHAAA! 💖
                 </h1>
                 <div class="animate__animated animate__fadeInUp flex items-center justify-center mt-4">
